# docs/swagger.json
@@ -366,6 +366,29 @@
                 }
             }
         },
+        "handlers.DiskInfo": {
+            "type": "object",
+            "properties": {
+                "freeMB": {
+                    "type": "integer"
+                },
+                "fsType": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "totalMB": {
+                    "type": "integer"
+                },
+                "usedMB": {
+                    "type": "integer"
+                },
+                "usedPercent": {
+                    "type": "number"
+                }
+            }
+        },
         "handlers.HostInfo": {
             "type": "object",
             "properties": {
@@ -387,6 +410,12 @@
                             "$ref": "#/definitions/handlers.CPUInfo"
                         }
                     ]
+                },
+                "disk": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.DiskInfo"
+                    }
                 },
                 "distro": {
                     "type": "string"
